# PonyCubeLiveWallpaper

./: .gitignore  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/include/OGRE/: OgreBuildSettings.h  OgreExports.h
app/include/OGRE/Bites/: OgreBitesPrerequisites.h
app/include/OGRE/HLMS/: OgreHlmsPrerequisites.h
app/include/OGRE/Overlay/: OgreOverlayPrerequisites.h
app/include/OGRE/Plugins/OctreeSceneManager/: OgreOctreePrerequisites.h
app/include/OGRE/Plugins/ParticleFX/: OgreParticleFXPrerequisites.h
app/include/OGRE/Property/: OgrePropertyPrerequisites.h
app/include/OGRE/RenderSystems/GLES2/: OgreGLSupportPrerequisites.h
app/include/OGRE/Volume/: OgreVolumePrerequisites.h
app/src/androidTest/java/com/jp/ogrelivewallpaper/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/jp/ponycubelivewallpaper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: resources.cfg
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jp/ogrelivewallpaper/: Service.java
app/src/main/java/com/jp/ponycubelivewallpaper/: Service.java
app/src/main/res/layout/: livewallpaper.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jp/ogrelivewallpaper/: ExampleUnitTest.java
app/src/test/java/com/jp/ponycubelivewallpaper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
models/: cube.blend  cube.material  cube.mesh  cube.mesh.xml  cube.scene  cube.xcf
